# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.502 2007-11-05 13:16:05 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/10/25) Improved Kernel::System::Crypt::PGP to return information about
    the PGP-keys that were actually used in Decrypt() and Verify().
 - (2007/10/25) Updated all cpan modules.
 - (2007/10/17) Added GroupLookup() and RoleLookup() to Group.pm and removed the
    two methods GetGroupIdByName() and GetRoleIdByName() which were already marked
    as deprecated.
 - (2007/10/08) Added support of ticket free text links in ticket view,
    configurable via SysConfig.
 - (2007/10/05) Added fist version of AJAX framework support in phone ticket.
 - (2007/10/01) Added <ModuleRequired Version="0.01">SomeModule</ModuleRequired>
    feature to .opm format for enforcing installed CPAN modules.
 - (2007/09/25) Fixed bug# 2312 - Wide character error in Layout.pm if system
    runs in utf-8 mode.
 - (2007/09/18) Did some improvments in Kernel/Output/HTML/Layout.pm to
    get an better performance if the block function is used many times
    (e. g. > 1000 times, 30% faster).
 - (2007/09/13) Fixed bug# 1186 - Convertion from HTML to text incomplete
    if html encoded chars like &Egrave; or &eacute; is used. Added full
    HTML to text convertion to email parser.
 - (2007/09/13) Improved report overview of perfornance log.

2.2.4 (2007/11/05)
 - (2007/11/05) Fixed bug# 2472 - Emails in utf8 are not sent correctly (problem
    after upgrading Kernel/cpan-lib/MIME/*.pm).
 - (2007/10/26) Fixed bug# 2446 - Subject is not quoted.
 - (2007/10/26) Fixed bug# 2442 - disappearing ticketfreetime checkboxes in
    some ticket masks.