@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.502 2007-11-05 13:16:05 martin Exp $
+# $Id: CHANGES,v 1.503 2007-11-05 13:28:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -32,6 +32,9 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.4 (2007/11/05)
+ - (2007/11/05) Fixed bug# 2473 - Not able to update existing cache files of
+    customer user backend because of file permission problems (cache files are
+    created with 644). From now on cache files are created with 664 permissions.
  - (2007/11/05) Fixed bug# 2472 - Emails in utf8 are not sent correctly (problem
     after upgrading Kernel/cpan-lib/MIME/*.pm).
  - (2007/10/26) Fixed bug# 2446 - Subject is not quoted.
